# tank_robot_rosgazebo

./: CMakeLists.txt  README.md  package.xml
config/: nav2_params.yaml  nav2_robot_view.rviz  navigate_through_poses_simple.xml  navigate_to_pose_simple.xml  slam_toolbox_online_async.yaml
description/: gazebo_control.xacro  robot.urdf.xacro  robot_core_hr.xacro  robot_core_lr.xacro
launch/: launch_sim.launch.py  nav2_navigation.launch.py  navigation_custom.launch.py  rsp.launch.py  slam_mapping.launch.py
maps/: my_map.pgm  my_map.yaml
meshes/: BaseClear.dae  BasePlastic.dae  BaseRubber.dae  HubMotor.dae  RubberWheel.dae
scripts/: custom_algorithms.py  custom_gridviz.py  custom_neighbors.py  custom_planner_server  set_initial_pose_once  wasd_teleop
worlds/: empty.world  training_map.world  warehouse_RIO_1.before_remove_missing.world  warehouse_RIO_1.world
